Fix COUCHDB-1863 add 'Documentation' section/toplink to www.coucdhb.org page
- The mailing lists no longer have a toplink
- The mailing lists are now broken in two sections:
    - user-oriented (announce, user)
    - developer-oriented (the rest)
- New "book" icon for documentation comes from Font-Awesome
- Staged version at http://hiperactivo.com/~kandinski/couchdb.org/

--- a/style/master.less
+++ b/style/master.less
@@ -579,7 +579,7 @@ blockquote {
 }
 .icon-about {        background-position: 0 @spacer-base;}
 .icon-contribute {   background-position: 0 @spacer-base - @spacer;}
-.icon-mailing-list { background-position: 0 @spacer-base - @spacer*2;}
+.icon-documentation { background-position: 0 @spacer-base - @spacer*2;}
 .icon-download {     background-position: 0 @spacer-base - @spacer*3;}
 .icon-more {         background-position: 0 @spacer-base - @spacer*4;}
 
